rest methods for lots (#2)
* rest methids for lots

* fix  methods for lots

* update/delete methods for lots

* fix  lots
